# RichTextEditor

./: .gitignore  CMakeLists.txt  release-and-deb.sh
DEBIAN/: control
include/: actions.hpp  config.in  dbussession.hpp  editorobservers.hpp  editortabwidget.hpp  formatactions.hpp  formats.hpp  menubarbuilder.hpp  richtexteditor.hpp  texteditoractions.hpp  tools.hpp
res/: resources.qrc
src/: dbussession.cpp  editorobservers.cpp  editortabwidget.cpp  formatactions.cpp  main.cpp  menubarbuilder.cpp  richtexteditor.cpp  texteditoractions.cpp
translations/: RichTextEditor_en_US.ts
